# beamr

./: .commit-msg.tmp  .gitignore  B-028a-SUMMARY.md  B-030-SUMMARY.md  B-032-SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.toml  Cargo.toml  DESIGN.md  GOVERNANCE.md  README.md  RELEASE_CHECKLIST.md  beamr-vm-design.md  erl_crash.dump  gleam-workflows-vision.md
crates/beamr/: Cargo.toml  README.md  build.rs
crates/beamr-cli/: Cargo.toml  README.md
crates/beamr-cli/src/: args.rs  errors.rs  main.rs  sinks.rs  tests.rs
crates/beamr-wasm/: Cargo.toml  build.rs
crates/beamr-wasm/src/: convert.rs  lib.rs
crates/beamr/benches/: jit_comparison.rs  jit_comparison_extended.rs
crates/beamr/fixtures/stdlib/: lists.erl
crates/beamr/src/: constant_pool.rs  error.rs  hook.rs  lib.rs  module.rs  timer.rs
crates/beamr/src/atom/: mod.rs  table.rs
crates/beamr/src/capability/: audit.rs  mod.rs  sandbox.rs
crates/beamr/src/constant_pool/: mod.rs  tests.rs
crates/beamr/src/distribution/: atom_cache.rs  connection.rs  control.rs  control_lifecycle.rs  control_lifecycle_tests.rs  control_monitor.rs  control_monitor_tests.rs  etf.rs  global.rs  handshake.rs  mod.rs  node.rs  pg.rs  pg_tests.rs  remote_link.rs  resolver.rs  sender.rs
crates/beamr/src/etf/: decode.rs  encode.rs  mod.rs  tags.rs
crates/beamr/src/ets/: bag.rs  copy.rs  match_arena.rs  match_spec.rs  mod.rs  ordered_set.rs  set.rs  table.rs  term_key.rs
crates/beamr/src/gc/: major.rs  minor.rs  mod.rs  tests.rs
crates/beamr/src/interpreter/: mod.rs  opcodes.rs  pattern.rs  tests.rs
crates/beamr/src/interpreter/opcodes/: binary.rs  closures.rs  core.rs  exceptions.rs  floats.rs  guards.rs  messaging.rs  mod.rs  native_call.rs  recv.rs  trampoline.rs
crates/beamr/src/io/: bridge.rs  facility.rs  mod.rs  resource.rs  ring.rs  standard_io.rs  thread_pool.rs  uring.rs
crates/beamr/src/jit/: aot.rs  aot_format.rs  cache.rs  compile_job.rs  compiler.rs  compiler_tests.rs  ir_allocation.rs  ir_arithmetic.rs  ir_binary.rs  ir_binary_lowering.rs  ir_closure.rs  ir_common.rs  ir_control.rs  ir_control_validation.rs  ir_exceptions.rs  ir_float.rs  ir_guards.rs  ir_message.rs  mod.rs  profiler.rs  runtime.rs  runtime_binary_build.rs  runtime_binary_match.rs  runtime_closure.rs  runtime_map.rs  runtime_message.rs  safepoint.rs  type_info.rs  types.rs
crates/beamr/src/jit/compiler/: compiler_tests.rs  dispatch.rs  dispatch_call.rs  dispatch_core.rs  dispatch_data.rs  dispatch_helpers.rs  ir_helpers.rs  ir_typed.rs  tests.rs
crates/beamr/src/loader/: decode.rs  embed.rs  load.rs  mod.rs  parser.rs  validate.rs
crates/beamr/src/loader/decode/: bounded.rs  budget.rs  chunks.rs  code.rs  compact.rs  etf.rs  instruction.rs  mod.rs  opcode.rs
crates/beamr/src/mailbox/: mod.rs  selective.rs
crates/beamr/src/native/: actor.rs  actor_cooperative.rs  actor_cooperative_tests.rs  actor_dynamic.rs  actor_dynamic_tests.rs  bifs.rs  capability.rs  code_management.rs  code_management_bifs.rs  context.rs  dictionary_bifs.rs  distribution_bifs.rs  etf_bifs.rs  ets_bifs.rs  exception_bifs.rs  file_bifs.rs  file_bifs_tests.rs  file_meta_bifs.rs  file_meta_bifs_tests.rs  gate3_bifs.rs  gleam_ffi.rs  gleam_ffi_tests.rs  group_leader.rs  inet_bifs.rs  io_message.rs  links.rs  local_send.rs  meridian_ffi.rs  mod.rs  native_process.rs  otp_stubs.rs  process_bifs.rs  process_info_bifs.rs  registry.rs  select.rs  selector_ffi.rs  selector_ffi_tests.rs  spawn.rs  supervision.rs  system_info_bifs.rs  (+3 more)
crates/beamr/src/native/context/: alloc.rs  mod.rs  tests.rs
crates/beamr/src/process/: gc.rs  heap.rs  mod.rs  registry.rs  stack.rs  tests.rs  types.rs
crates/beamr/src/replay/: debugger.rs  driver.rs  file.rs  file_tests.rs  mod.rs  recorder.rs
crates/beamr/src/scheduler/: closure_spawn_tests.rs  dirty.rs  execution.rs  exit_capture.rs  exit_tombstones.rs  mod.rs  module_management.rs  pg_propagation.rs  process_slot.rs  run_queue.rs  spawning.rs  steal.rs  supervision_integration.rs  supervision_tests.rs  suspension.rs  test_helpers.rs  tests.rs  timer_integration.rs  wasm.rs  wasm_native.rs  wasm_native_tests.rs  wasm_tests.rs
crates/beamr/src/supervision/: link.rs  mod.rs  monitor.rs  monitor_tests.rs
crates/beamr/src/telemetry/: lifecycle.rs  metrics.rs  mod.rs  spans.rs
crates/beamr/src/term/: bigint_convert.rs  bigint_math.rs  binary.rs  binary_ref.rs  boxed.rs  compare.rs  format.rs  hash.rs  json.rs  mod.rs  pid_ref.rs  reference_ref.rs  shared_binary.rs  sub_binary.rs
crates/beamr/tests/: bignum_edges.rs  bs_create_bin.rs  capability_policy.rs  caught_exception_exit.rs  differential.rs  dirty_scheduler.rs  distribution_e2e.rs  distribution_mesh_handshake.rs  embedded_loading.rs  gc_integration.rs  gleam_gate_e2e.rs  hot_code_loading.rs  is_function2_guard.rs  is_function_bif.rs  local_send_gate.rs  memory_stability.rs  namespace_isolation.rs  native_process.rs  native_supervision.rs  nif_private_data.rs  no_box_leak.rs  otp_integration.rs  otp_loading.rs  otp_zero_unresolved.rs  pg_distribution_e2e.rs  proof_of_life.rs  recv_after_timeout.rs  recv_marker.rs  sample_workflow_e2e.rs  stdlib_loading.rs  supervision_integration.rs  suspend_reexec.rs  suspend_result_binary.rs  suspend_wakeup.rs  tagged_tuple_patterns.rs
crates/beamr/tests/fixtures/: bignum.beam  bignum.erl  bs_create_bin_fixture.beam  bs_create_bin_fixture.erl  caught_exception_exit.beam  caught_exception_exit.erl  hello.beam  is_function2_guard.beam  is_function2_guard.erl  is_function_bif.beam  is_function_bif.erl  proof.beam  recv_after_timer.beam  recv_after_timer.erl  recv_marker_fixture.beam  recv_marker_fixture.erl  recv_marker_timeout_fixture.beam  recv_marker_timeout_fixture.erl  suspend_binary_fixture.beam  suspend_binary_fixture.erl  suspend_reexec_fixture.S  suspend_reexec_fixture.beam  suspend_reexec_fixture.erl  suspend_reexec_helper.beam  suspend_reexec_helper.erl  tagged_tuple_patterns.beam  tagged_tuple_patterns.erl
crates/gleam-types/: Cargo.toml  README.md
crates/gleam-types/src/: extractor.rs  format.rs  lib.rs  main.rs
(+646 files in other folders)
