[package]
name = "beamr-cli"
version = "0.3.0"
edition = "2024"
description = "Thin runner for beamr — load a .beam file and execute it"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "beamr"
path = "src/main.rs"

[dependencies]
beamr = { version = "0.3.13", path = "../beamr" }
