[package]
name = "beamr-wasm"
version = "0.4.1"
edition = "2024"
description = "WASM bindings for the Beamr runtime"
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beamr = { version = "0.4.1", path = "../beamr", features = ["json"] }
serde_json = "1.0.150"
wasm-bindgen = "0.2.105"

[dev-dependencies]
wasm-bindgen-test = "0.3.55"
