[package]
name = "beamr-wasm"
version = "0.4.1"
edition = "2024"
description = "WASM bindings for the Beamr runtime"
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beamr = { version = "0.6.1", path = "../beamr", features = ["json"] }
js-sys = "0.3.100"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.150"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.73"

[dev-dependencies]
wasm-bindgen-test = "0.3.55"

[build-dependencies]
zstd = "0.13.3"
