[package]
name = "beamr-wasm"
version = "0.5.0"
edition = "2024"
description = "WASM bindings for the Beamr runtime"
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The wasm host seam drives the cooperative single-threaded runtime. Default
# features (threads/net/fs/jit/embedded) pull tokio/io-uring/cranelift and the
# zstd C build, none of which compile for wasm32 — so opt out of them and select
# only the cooperative runtime plus the JSON term codec the host bridge uses.
beamr = { version = "0.11.0", path = "../beamr", default-features = false, features = [
    "cooperative",
    "json",
] }
js-sys = "0.3.100"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.150"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.73"

[dev-dependencies]
wasm-bindgen-test = "0.3.55"

[build-dependencies]
zstd = "0.13.3"
