[package]
name = "beamr"
version = "0.12.0"
edition = "2024"
description = "A Rust runtime with the BEAM's execution model, targeting Gleam"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors = [
    "Tom Whiting <tom@ablative.com.au>",
    "Josh Bearup <Joshuabearup1@gmail.com>",
]

[dependencies]
base64 = { version = "0.22.1", optional = true }
cranelift-codegen = { version = "0.131.2", optional = true }
cranelift-frontend = { version = "0.131.2", optional = true }
cranelift-jit = { version = "0.131.2", optional = true }
cranelift-module = { version = "0.131.2", optional = true }
cranelift-native = { version = "0.131.2", optional = true }
crossbeam-channel = { version = "0.5.15", optional = true }
crossbeam-deque = { version = "0.8.6", optional = true }
crossbeam-queue = { version = "0.3.12", optional = true }
dashmap = "6.1.0"
flate2 = "1.1.9"
gleam-types = { path = "../gleam-types", version = "0.4.3" }
libc = { version = "0.2.186", optional = true }
md5 = "0.8.0"
num_cpus = { version = "1.17.0", optional = true }
opentelemetry = { version = "0.32.0", optional = true }
rand = "0.10.1"
unicode-segmentation = "1.12"
# Portable monotonic clock. On native targets `web_time::Instant` is a
# re-export of `std::time::Instant` (zero behavior change); on
# `wasm32-unknown-unknown` it is backed by `performance.now()`, so the
# cooperative native timer wheel no longer panics on the missing wasm time
# source. Used ONLY in the timer wheel + cooperative scheduler timer seam.
web-time = "1.1.0"
rustix = { version = "1.1.4", features = ["fs", "net"], optional = true }
serde_json = { version = "1.0.150", optional = true }
tokio = { version = "1.52.3", features = ["net", "io-util", "time", "rt", "rt-multi-thread", "macros", "sync"], optional = true }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
criterion = "0.8.2"
# The in-memory exporters (`InMemory{Span,Metric,Log}Exporter`) used by the
# telemetry tests live behind opentelemetry_sdk's own `testing` feature; the
# SDK's `#[cfg(test)]` does not apply when it is compiled as our dependency,
# so the feature must be selected explicitly here.
opentelemetry_sdk = { version = "0.32.1", features = ["testing"] }
proptest = "1.11.0"

[[bench]]
name = "jit_comparison"
harness = false
required-features = ["jit", "threads"]

[[bench]]
name = "jit_comparison_extended"
harness = false
required-features = ["jit", "threads"]

[features]
default = ["std", "threads", "net", "fs", "jit", "embedded"]
std = []
# Cooperative single-threaded runtime (WR-0 spike). Brings in only the
# lock-free SegQueue mailbox dependency; no tokio/crossbeam-channel/-deque,
# no io-uring, no num_cpus. Intended for wasm32 where OS threads are absent.
cooperative = ["std", "dep:crossbeam-queue"]
threads = ["std", "dep:crossbeam-channel", "dep:crossbeam-deque", "dep:crossbeam-queue", "dep:io-uring", "dep:num_cpus", "dep:tokio"]
net = ["std", "dep:libc", "dep:rustix", "dep:tokio"]
fs = ["std", "dep:libc", "dep:rustix"]
jit = ["std", "threads", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native"]
embedded = ["std", "dep:zstd"]
json = ["dep:base64", "dep:serde_json"]
test-support = []
telemetry = ["std", "dep:opentelemetry"]

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

# On wasm32 `getrandom` (pulled in transitively via `rand`) needs its browser
# JS backend; without this feature the wasm build fails to find a randomness
# source. Selecting the feature here is harmless on native targets where this
# target stanza does not apply.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[build-dependencies]
zstd = "0.13.3"
