[package]
name = "gleam-types"
version = "0.4.0"
edition = "2024"
description = "Gleam type sidecar extractor for beamr"
readme = "README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
camino = "1.2.1"
ecow.workspace = true

[[bin]]
name = "gleam-types"
path = "src/main.rs"
